--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,56 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.buttonGroupDiv{
+    display: flex;
+    justify-content: space-evenly;
+}
+.navbar{
+    background-color: rgb(50, 112, 131);
+    
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar div a{
+    color:white;
+    text-decoration: none;
 }
+
+.navbar div a:hover{
+    color:white;
+    text-decoration: none;
+    font-size: larger;
+}
+
+.LoginPage{
+background-image: url("./images/LoginPage.jpg");
+  background-attachment: fixed;
+  background-size: cover;
+  height:100vh
+}
+
+
+.loginformdiv {
+    margin: 50px 0px;
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+  }
+
+
+  .dashboardImg{
+    background-image: url("./images/dashboard.jpg");
+    background-attachment: fixed;
+    background-size: cover;
+    min-height: 800px;
+  }
+
+  .dashboardContetnt{
+    background-color: #07294d;
+    opacity: 0.5;
+    min-height: 800px;
+  }
+
+  .whyknackseek{
+      display:flex;
+      justify-content:space-evenly;
+  }
